PlaylistsViewController + PlaylistCell, TracksViewController + TrackCell

--- a/MySpotify/Base.lproj/Main.storyboard
+++ b/MySpotify/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,9 +26,146 @@
                             <constraint firstItem="dDA-6J-PAV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kjH-yW-Nww"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="THS-mS-XS8" kind="presentation" identifier="PresentPlaylists" id="l5f-ye-has"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="QXC-H5-VWy">
+            <objects>
+                <tableViewController id="xrn-IY-jf3" customClass="PlaylistsViewController" customModule="MySpotify" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lMd-7J-YeX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PlaylistTableViewCell" rowHeight="67" id="F5G-8q-rwg" customClass="PlaylistTableViewCell" customModule="MySpotify" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="375" height="67"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="F5G-8q-rwg" id="fHD-7N-7c2">
+                                    <frame key="frameInset" width="342" height="66"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Metallica - The Best" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r4o-hf-Noz">
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15 tracks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14O-Yy-hrY">
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="leadingMargin" secondItem="r4o-hf-Noz" secondAttribute="leading" id="7lP-ey-MWd"/>
+                                        <constraint firstItem="14O-Yy-hrY" firstAttribute="leading" secondItem="r4o-hf-Noz" secondAttribute="leading" id="HGF-oT-bjG"/>
+                                        <constraint firstAttribute="topMargin" secondItem="r4o-hf-Noz" secondAttribute="top" id="Rbo-Gu-ReJ"/>
+                                        <constraint firstItem="14O-Yy-hrY" firstAttribute="top" secondItem="r4o-hf-Noz" secondAttribute="bottom" constant="3" id="x1F-xf-cMV"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="14O-Yy-hrY" secondAttribute="trailing" constant="25" id="9mR-Nl-oEi"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="r4o-hf-Noz" secondAttribute="trailing" constant="30" id="i2I-IV-poN"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="countLabel" destination="14O-Yy-hrY" id="TBS-zT-OVf"/>
+                                    <outlet property="titleLabel" destination="r4o-hf-Noz" id="f3k-3Q-3kh"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="xrn-IY-jf3" id="4wo-2h-PRn"/>
+                            <outlet property="delegate" destination="xrn-IY-jf3" id="8i2-dg-U0C"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="PaJ-gA-I8d"/>
+                    <connections>
+                        <segue destination="BQz-L7-qu6" kind="show" identifier="ShowTracks" id="9lp-2L-Tgh"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="egS-Gd-uJP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2121" y="72"/>
+        </scene>
+        <!--Tracks View Controller-->
+        <scene sceneID="QOt-gE-bMc">
+            <objects>
+                <tableViewController id="BQz-L7-qu6" customClass="TracksViewController" customModule="MySpotify" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="gSh-Vu-FOB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TrackTableViewCell" rowHeight="69" id="IZD-xJ-2VN" customClass="TrackTableViewCell" customModule="MySpotify" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="375" height="69"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IZD-xJ-2VN" id="6om-un-Jvm">
+                                    <frame key="frameInset" width="375" height="68"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Leaf Clover" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DoZ-5y-gay">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Metallica" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y8o-Fq-MVK">
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="120bpm" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EaT-D2-ZkE">
+                                            <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="EaT-D2-ZkE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DoZ-5y-gay" secondAttribute="trailing" constant="5" id="4mv-gG-ela"/>
+                                        <constraint firstItem="EaT-D2-ZkE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Y8o-Fq-MVK" secondAttribute="trailing" constant="5" id="cDs-5b-dhf"/>
+                                        <constraint firstAttribute="leadingMargin" secondItem="DoZ-5y-gay" secondAttribute="leading" id="dfD-Q6-DIt"/>
+                                        <constraint firstItem="Y8o-Fq-MVK" firstAttribute="top" secondItem="DoZ-5y-gay" secondAttribute="bottom" constant="4" id="g51-Xs-cRm"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="EaT-D2-ZkE" secondAttribute="trailing" constant="6" id="hO5-P7-e8m"/>
+                                        <constraint firstItem="EaT-D2-ZkE" firstAttribute="centerY" secondItem="6om-un-Jvm" secondAttribute="centerY" id="i2w-JD-bDK"/>
+                                        <constraint firstItem="Y8o-Fq-MVK" firstAttribute="leading" secondItem="DoZ-5y-gay" secondAttribute="leading" id="rBi-HI-rbQ"/>
+                                        <constraint firstAttribute="topMargin" secondItem="DoZ-5y-gay" secondAttribute="top" id="ss7-HA-ci2"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="artistLabel" destination="Y8o-Fq-MVK" id="ZS5-oC-wmz"/>
+                                    <outlet property="bpmLabel" destination="EaT-D2-ZkE" id="85z-uS-ykM"/>
+                                    <outlet property="titleLabel" destination="DoZ-5y-gay" id="fXS-cf-ZIz"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="BQz-L7-qu6" id="Lu2-eB-ksd"/>
+                            <outlet property="delegate" destination="BQz-L7-qu6" id="5yd-I9-SSj"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ava-9z-LR0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3174" y="72"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Rpx-qT-ZRw">
+            <objects>
+                <navigationController id="THS-mS-XS8" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="z7c-a7-dc7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="xrn-IY-jf3" kind="relationship" relationship="rootViewController" id="bTr-IE-G4I"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LNF-nc-WOv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1092" y="72"/>
         </scene>
     </scenes>
 </document>
